another one commit

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
 <body>  
      <center><h1>Hi, my name is Yana</h1></center>
+     <center><h1>Hi, my name is Yana</h1></center>
      <div>
           <h1><font color='orange'>About myself</font> </h1>
           <p>
