add ignor to .gitignor

--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
 </head>
 <body>  
      <center><h1>Hi, my name is Yana</h1></center>
+    <h1>Hello</h1>
+    <h2>Hello 2</h2>
+    <h3>Hi</h3>
      <center><h1>Hi, my name is Yana</h1></center>
+     <h2>11</h2>
      <div>
           <h1><font color='orange'>About myself</font> </h1>
           <p>
